crates/analyzer/tests/snapshots/errors__call_send_value_with_wrong_type2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: incorrect type for `send_value` argument `wei`
  ┌─ [snippet]:3:31
  │
3 │   std::send_value(address(0), true)
  │                               ^^^^ this has type `bool`; expected type `u256`


